# cli-chat

./: Cargo.toml  README.md
src/: client.rs  server.rs  server2.rs
