[package]
name = "cli-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "server2"
path = "./src/server2.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
